Massive update.Primarily admin update and roles.
Added the Admin role and ability to update and add cards for surgeons that they havent created.
Added the ability to add reports for the admin user and be able to print two selected report of the surgeons and users.

*will be wiping database of main users when pushing to live to restart.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,10 +10,9 @@ spring.h2.console.path=/h2-console
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
+spring.sql.init.mode=never
+spring.jpa.defer-datasource-initialization=true
 
 # Thymeleaf Configuration
 spring.thymeleaf.cache=false
 
-# Security Configuration (temporary for development)
-spring.security.user.name=admin
-spring.security.user.password=admin
