--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,6 +5,8 @@ spring.datasource.username=sa
 spring.datasource.password=password
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
+server.address=0.0.0.0
+server.port=8080
 # JPA Configuration
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.jpa.hibernate.ddl-auto=update
